[gd_scene load_steps=8 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://crt.tres" type="Shader" id=2]
[ext_resource path="res://blipSelect.wav" type="AudioStream" id=3]

[sub_resource type="Shader" id=3]

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 2 )
shader_param/scanline_count = 50.0

[sub_resource type="ViewportTexture" id=1]

[node name="Control" type="Control"]
material = SubResource( 4 )
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0
follow_viewport_enable = true

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
material = SubResource( 2 )
margin_right = 514.0
margin_bottom = 514.0
mouse_filter = 2
texture = SubResource( 1 )
expand = true

[node name="ColorRect2" type="ColorRect" parent="."]
margin_right = 513.0
margin_bottom = 514.0
color = Color( 0, 0.662745, 0.678431, 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = 485.0
margin_right = 513.0
margin_bottom = 514.0
color = Color( 0.254902, 0.254902, 0.254902, 1 )

[node name="Button" type="Button" parent="."]
margin_left = 3.0
margin_top = 488.0
margin_right = 63.0
margin_bottom = 508.0
text = "Start"

[node name="StartMenu" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="ColorRect3" type="ColorRect" parent="StartMenu"]
margin_top = 389.0
margin_right = 83.0
margin_bottom = 485.0
color = Color( 0.239216, 0.239216, 0.239216, 1 )

[node name="Browser" type="Button" parent="StartMenu"]
margin_top = 464.0
margin_right = 80.0
margin_bottom = 484.0
text = "Browser"

[node name="Command" type="Button" parent="StartMenu"]
margin_top = 440.0
margin_right = 80.0
margin_bottom = 460.0
text = "Command"

[node name="Folders" type="Button" parent="StartMenu"]
margin_top = 416.0
margin_right = 80.0
margin_bottom = 436.0
text = "Folders"

[node name="Settings" type="Button" parent="StartMenu"]
margin_top = 392.0
margin_right = 80.0
margin_bottom = 412.0
text = "Settings"

[node name="beep" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -5.243
pitch_scale = 0.93

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="StartMenu/Browser" to="." method="_on_Browser_pressed"]
[connection signal="pressed" from="StartMenu/Command" to="." method="_on_Command_pressed"]
[connection signal="pressed" from="StartMenu/Folders" to="." method="_on_Folders_pressed"]
[connection signal="pressed" from="StartMenu/Settings" to="." method="_on_Settings_pressed"]
